--- a/POKESHOP_BACK/package.json
+++ b/POKESHOP_BACK/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "pokeshop_back",
+  "name": "pokeshop-backend",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Backend for Pokemon Shop e-commerce application",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "node src/postgreSQL.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "pg": "^8.14.1"
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
